# miden-base

./: .gitignore  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  _typos.toml  clippy.toml  rustfmt.toml
crates/miden-block-prover/: Cargo.toml  README.md
crates/miden-block-prover/src/: errors.rs  local_block_prover.rs
crates/miden-lib/: Cargo.toml  README.md  build.rs
crates/miden-lib/asm/account_components/: basic_wallet.masm  multisig_rpo_falcon_512.masm  no_auth.masm  rpo_falcon_512.masm  rpo_falcon_512_acl.masm  rpo_falcon_512_procedure_acl.masm
crates/miden-lib/asm/kernels/transaction/: api.masm  main.masm  tx_script_main.masm
crates/miden-lib/asm/miden/: account.masm  active_note.masm  asset.masm  faucet.masm  input_note.masm  input_notes.masm  kernel_proc_offsets.masm  note.masm  output_note.masm  tx.masm
crates/miden-lib/asm/miden/auth/: mod.masm  rpo_falcon512.masm
crates/miden-lib/asm/note_scripts/: P2ID.masm  P2IDE.masm  SWAP.masm  utils.masm
crates/miden-lib/asm/shared_modules/: account_id.masm
crates/miden-lib/asm/shared_utils/util/: asset.masm
crates/miden-lib/src/: auth.rs  lib.rs
crates/miden-lib/src/account/auth/: mod.rs  no_auth.rs  rpo_falcon_512.rs  rpo_falcon_512_acl.rs  rpo_falcon_512_multisig.rs
crates/miden-lib/src/account/components/: mod.rs
crates/miden-lib/src/account/faucets/: mod.rs
crates/miden-lib/src/account/interface/: component.rs  mod.rs  test.rs
crates/miden-lib/src/account/wallets/: mod.rs
crates/miden-lib/src/errors/: mod.rs  note_script_errors.rs  script_builder_errors.rs  transaction_errors.rs  tx_kernel_errors.rs
crates/miden-lib/src/note/: mod.rs  utils.rs  well_known_note.rs
crates/miden-lib/src/testing/: mock_account.rs  mock_account_code.rs  mock_util_lib.rs  mod.rs  note.rs
crates/miden-lib/src/testing/account_component/: conditional_auth.rs  incr_nonce.rs  mock_account_component.rs  mock_faucet_component.rs  mod.rs
crates/miden-lib/src/transaction/: events.rs  inputs.rs  kernel_procedures.rs  memory.rs  mod.rs  outputs.rs
crates/miden-lib/src/transaction/procedures/: kernel_v0.rs  mod.rs
crates/miden-lib/src/utils/: mod.rs  script_builder.rs
crates/miden-objects/: Cargo.toml  README.md
crates/miden-objects/benches/: account_seed.rs
crates/miden-objects/src/: constants.rs  errors.rs  lib.rs
crates/miden-objects/src/account/: auth.rs  file.rs  header.rs  mod.rs  partial.rs
crates/miden-objects/src/account/account_id/: account_type.rs  id_prefix.rs  mod.rs  seed.rs  storage_mode.rs
crates/miden-objects/src/account/builder/: mod.rs
crates/miden-objects/src/account/code/: header.rs  mod.rs  procedure.rs
crates/miden-objects/src/account/component/: mod.rs
crates/miden-objects/src/account/delta/: lexicographic_word.rs  mod.rs  storage.rs  vault.rs
crates/miden-objects/src/account/storage/: header.rs  map.rs  mod.rs  partial.rs
crates/miden-objects/src/address/: interface.rs  mod.rs  network_id.rs  type.rs
crates/miden-objects/src/asset/: fungible.rs  mod.rs  nonfungible.rs  token_symbol.rs
crates/miden-objects/src/asset/vault/: asset_witness.rs  mod.rs  partial.rs
crates/miden-objects/src/batch/: account_update.rs  batch_id.rs  input_output_note_tracker.rs  note_tree.rs  ordered_batches.rs  proposed_batch.rs  proven_batch.rs
crates/miden-objects/src/block/: account_tree.rs  account_update_witness.rs  account_witness.rs  block_account_update.rs  block_inputs.rs  block_number.rs  blockchain.rs  header.rs  mod.rs  note_tree.rs  nullifier_tree.rs  nullifier_witness.rs  partial_account_tree.rs  partial_nullifier_tree.rs  proposed_block.rs  proven_block.rs
crates/miden-objects/src/note/: assets.rs  details.rs  execution_hint.rs  file.rs  header.rs  inputs.rs  location.rs  metadata.rs  mod.rs  note_id.rs  note_tag.rs  note_type.rs  nullifier.rs  partial.rs  recipient.rs  script.rs
crates/miden-objects/src/testing/: account.rs  account_code.rs  account_component.rs  account_id.rs  add_component.rs  asset.rs  block.rs  block_note_tree.rs  mod.rs  noop_auth_component.rs  note.rs  partial_blockchain.rs  storage.rs  tx.rs
crates/miden-objects/src/transaction/: executed_tx.rs  inputs.rs  mod.rs  ordered_transactions.rs  outputs.rs  partial_blockchain.rs  proven_tx.rs  transaction_id.rs  tx_args.rs  tx_header.rs  tx_summary.rs  tx_witness.rs
crates/miden-objects/src/transaction/inputs/: account.rs  mod.rs  notes.rs
crates/miden-testing/: Cargo.toml  README.md
crates/miden-testing/src/: executor.rs  lib.rs  mock_host.rs  utils.rs
crates/miden-testing/src/kernel_tests/: mod.rs
crates/miden-testing/src/kernel_tests/batch/: proposed_batch.rs  proven_tx_builder.rs
crates/miden-testing/src/kernel_tests/block/: proposed_block_errors.rs  proposed_block_success.rs  proven_block_error.rs  proven_block_success.rs  utils.rs
crates/miden-testing/src/kernel_tests/tx/: mod.rs  test_account.rs  test_account_delta.rs  test_active_note.rs  (+15 more)
crates/miden-testing/src/mock_chain/: auth.rs  chain.rs  chain_builder.rs  mod.rs  note.rs  proven_tx_ext.rs
crates/miden-testing/src/tx_context/: builder.rs  context.rs
crates/miden-testing/tests/: lib.rs
crates/miden-testing/tests/auth/: mod.rs  multisig.rs  rpo_falcon_acl.rs  rpo_falcon_procedure_acl.rs
crates/miden-testing/tests/scripts/: faucet.rs  fee.rs  mod.rs  p2id.rs  p2ide.rs  send_note.rs  swap.rs
crates/miden-testing/tests/wallet/: mod.rs
crates/miden-tx/: Cargo.toml  README.md
crates/miden-tx-batch-prover/: Cargo.toml  README.md
crates/miden-tx-batch-prover/src/: local_batch_prover.rs
crates/miden-tx/src/: lib.rs
crates/miden-tx/src/auth/: mod.rs  tx_authenticator.rs
crates/miden-tx/src/errors/: mod.rs
crates/miden-tx/src/executor/: data_store.rs  exec_host.rs  mod.rs  notes_checker.rs
crates/miden-tx/src/host/: account_delta_tracker.rs  account_procedures.rs  link_map.rs  mod.rs  note_builder.rs  script_mast_forest_store.rs  storage_delta_tracker.rs  tx_progress.rs
crates/miden-tx/src/prover/: mast_store.rs  mod.rs  prover_host.rs
crates/miden-tx/src/verifier/: mod.rs
(+60 files in other folders)
