[package]
authors.workspace      = true
categories             = ["cryptography"]
description            = "Miden blockchain block executor and prover"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["block", "miden", "prover"]
license.workspace      = true
name                   = "miden-block-prover"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.11.4"

[lib]
bench = false

[features]
testing = []

[dependencies]
miden-lib     = { workspace = true }
miden-objects = { workspace = true }
thiserror     = { workspace = true }
