[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Standard library of the Miden protocol"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["kernel", "miden", "transaction"]
license.workspace      = true
name                   = "miden-lib"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.11.0"

[lib]

[features]
default         = ["std"]
std             = ["assembly/std", "miden-objects/std", "miden-stdlib/std", "vm-processor/std"]
testing         = ["miden-objects/testing"]
with-debug-info = ["miden-stdlib/with-debug-info"]

[dependencies]
miden-objects = { workspace = true }
miden-stdlib  = { workspace = true }
thiserror     = { workspace = true }

[build-dependencies]
assembly     = { workspace = true }
miden-stdlib = { workspace = true }
regex        = { version = "1.11" }
walkdir      = { version = "2.5" }

[dev-dependencies]
anyhow         = "1.0"
assert_matches = { workspace = true }
miden-objects  = { features = ["testing"], workspace = true }
vm-processor   = { features = ["testing"], workspace = true }
