[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Core components of the Miden protocol"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "objects"]
license.workspace      = true
name                   = "miden-objects"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.11.4"

[[bench]]
harness = false
name    = "account_seed"

[lib]
bench = false

[features]
default = ["std"]
std = [
  "dep:serde",
  "dep:toml",
  "miden-assembly/std",
  "miden-core/std",
  "miden-crypto/std",
  "miden-processor/std",
  "miden-verifier/std",
]
testing = ["dep:rand", "dep:rand_xoshiro", "dep:winter-rand-utils"]

[dependencies]
# Miden dependencies
miden-assembly    = { workspace = true }
miden-core        = { workspace = true }
miden-crypto      = { workspace = true }
miden-processor   = { workspace = true }
miden-utils-sync  = { workspace = true }
miden-verifier    = { workspace = true }
winter-rand-utils = { optional = true, version = "0.13" }

# External dependencies
bech32       = { default-features = false, features = ["alloc"], version = "0.11" }
log          = { optional = true, version = "0.4" }
rand         = { optional = true, workspace = true }
rand_xoshiro = { default-features = false, optional = true, version = "0.7" }
semver       = { features = ["serde"], version = "1.0" }
serde        = { features = ["derive"], optional = true, version = "1.0" }
thiserror    = { workspace = true }
toml         = { optional = true, version = "0.8" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { features = ["wasm_js"], version = "0.3" }

[dev-dependencies]
anyhow         = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assert_matches = { workspace = true }
criterion      = { default-features = false, features = ["html_reports"], version = "0.5" }
miden-objects  = { features = ["testing"], path = "." }
pprof          = { default-features = false, features = ["criterion", "flamegraph"], version = "0.14" }
rstest         = { workspace = true }
tempfile       = { version = "3.19" }
winter-air     = { version = "0.13" }
