[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden blockchain transaction executor and prover"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "transaction"]
license.workspace      = true
name                   = "miden-tx"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.11.0"

[features]
concurrent = ["miden-prover/concurrent", "std"]
default    = ["std"]
std        = ["miden-lib/std", "miden-objects/std", "miden-prover/std", "miden-verifier/std", "vm-processor/std"]
testing    = ["miden-lib/testing", "miden-objects/testing", "vm-processor/testing"]

[dependencies]
# Workspace dependencies
miden-lib     = { workspace = true }
miden-objects = { workspace = true }

# Miden dependencies
miden-prover   = { workspace = true }
miden-verifier = { workspace = true }
vm-processor   = { workspace = true }

# External dependencies
rand      = { workspace = true }
thiserror = { workspace = true }
tokio     = { features = ["rt"], workspace = true }

[dev-dependencies]
anyhow         = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assembly       = { workspace = true }
assert_matches = { workspace = true }
miden-tx       = { features = ["testing"], path = "." }
