[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden blockchain transaction executor and prover"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "transaction"]
license.workspace      = true
name                   = "miden-tx"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version                = "0.11.0"

[features]
concurrent = ["miden-prover/concurrent", "std"]
default    = ["std"]
std        = ["miden-lib/std", "miden-objects/std", "miden-processor/std", "miden-prover/std", "miden-verifier/std"]
testing    = ["miden-lib/testing", "miden-objects/testing", "miden-processor/testing"]

[dependencies]
# Workspace dependencies
miden-lib     = { workspace = true }
miden-objects = { workspace = true }

# Miden dependencies
miden-processor = { workspace = true }
miden-prover    = { workspace = true }
miden-verifier  = { workspace = true }

# External dependencies
rand      = { workspace = true }
thiserror = { workspace = true }
tokio     = { features = ["rt"], workspace = true }

[dev-dependencies]
anyhow         = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assert_matches = { workspace = true }
miden-assembly = { workspace = true }
miden-tx       = { features = ["testing"], path = "." }
